--- a/index.html
+++ b/index.html
@@ -9,16 +9,51 @@
 </head>
 <body>
     
-</body>
+  <div class="landing">
+    <img src="h-img.jpg="" id="">
+    <h1>WELCOME</h1> 
+    <h1> TO DELANI STUDIO</h1>
+    <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+    <div class="mouse-click"></div>
+    <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a> 
+  </div>
+  <div class="container about" id="about-us">
+    <h2 id="about">ABOUT US</h2>
+    <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
+    <p>Our approach unifies design, development and product managent to create exceptional products.</p> 
+    <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+    <p>we help translate them into active and elegant solutions.We provide support to all projects and we make sure all things run smoothly</p>
+  </div>
+</body><div class="services">
+    <div id="servicesoverlay">
+      <h2>SERVICES</h2>
+      <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
+      <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+      <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+    </div>
 </html>
-    <link rel="styleseet" ref="css/bootstrap.css">
-<ead>
-<body>
-<div class="landing">
-    <div class="Delani"></div>
-    <h1>Welcome to Delani Studio</h1>
-    <p>This is is were amazing tings suc as designing are done</p>
-    <p>This is were amazing tings suc as designing are done</p>
+
+<body
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 </div>
     <div class="keyboard"></div>
