--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
       <h2>SERVICES</h2>
       <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
       <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
-      <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+      <p>Based on your requirements, we can provide a complete offering or just the piece you need.We also do all research to make sure the project is fully set .</p>
     </div>
+    <h2>
+        <h2 class="title">DESIGN</h2>
+        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+          <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+      </div>
+      <div id="design-image">
+    </h2>
+
 </html>
 
 <body
