--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     
   <div class="landing">
-    <img src="h-img.jpg="" id="">
+      <div class="Delani">
     <h1>WELCOME</h1> 
-    <h1> TO DELANI STUDIO</h1>
+    <p>TO DELANI STUDIO</p>
     <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
     <div class="mouse-click"></div>
     <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a> 
+    </div>
   </div>
   <div class="container about" id="about-us">
     <h2 id="about">ABOUT US</h2>
@@ -31,13 +32,34 @@
       <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
       <p>Based on your requirements, we can provide a complete offering or just the piece you need.We also do all research to make sure the project is fully set .</p>
     </div>
-    <h2>
-        <h2 class="title">DESIGN</h2>
-        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
-          <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
-      </div>
+    <div class="Design">
       <div id="design-image">
-    </h2>
+        <img src="./IP3-master/assets/services_icons/design_icon.png" alt="">
+        </div>
+        <p>design</p></div> and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p></and>
+         and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+         </div>
+    </div><h3 class="title">DEVELOPMENT</h3>
+    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+       <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+  </div>
+  <div id="development-image">
+    <img src="images/services_icons/dev_icon.png" alt="development">
+    <P>DEVELOPMENT</P>
+  </div>
+</div>
+<div class="management">
+  <div id="product">
+    <h3 class="title">PRODUCT MANAGEMENT</h3>
+    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+    <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+  </div>
+  <div id="product-image">
+    <img src="images/services_icons/product_icon.png" alt="products">
+    <P>PRODUCT MANAGEMENT</P>
+  </div>
+
+    </div>
 
 </html>
 
