--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
   <div class="landing">
     <div class="Delani">
+      <img src="./IP3-master/assets/logo/logo.png" alt="">
       <h1>WELCOME</h1>
       <p>TO DELANI STUDIO</p>
       <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
       <div class="mouse-click"></div>
-      <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a>
+      <a href="#about-us"><img src="./IP3-master/assets/mouse_click.png" alt=" mouse_click" id="mouse-click"></a>
     </div>
   </div>
   <div class="container about" id="about-us">
@@ -56,7 +57,7 @@
     test-driven development and pair programming.</p>
   </div>
   <div id="development-image">
-    <img src="images/services_icons/dev_icon.png" alt="development">
+    <img src="./IP3-master/assets/services_icons/dev_icon.png" alt="development">
     <P>DEVELOPMENT</P>
   </div>
   </div>
@@ -68,9 +69,52 @@
         test-driven development and pair programming.</p>
     </div>
     <div id="product-image">
-      <img src="images/services_icons/product_icon.png" alt="products">
+      <img src="./IP3-master/assets/services_icons/product_icon.png" alt="products">
       <P>PRODUCT MANAGEMENT</P>
+    </div></div>
+  </div>
+</div>
+</div>
+<div class="portfolio">
+<h2>PORTFOLIO</h2>
+<div class="row" id="portfolio">
+  <div class="col-md-3" id="work1">
+    <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work4.jpg" alt="work1" >
+    <p id="overlay"class="text">Black Studio</p>
+  </div>
+  <div class="col-md-3" id="work2">
+    <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work3.jpg" alt="work2" id="work2">
+    <p id="overlay2" class="text"> Ontario Security</p>
+  </div>
+  <div class="col-md-3" id="work3">
+    <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work2.jpg" alt="work3">
+    <p id="overlay3"class="text">Pyramids</p>
+  </div>
+  <div class="col-md-3" id="work4">
+    <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work1.jpg" alt="work4">
+    <p id="overlay4" class="text">Jim Carry/p>
+  </div></div>
+  <div class="row" id="portfolio">
+      <div class="col-md-3" id="work5">
+        <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work5.jpg" alt="work1">
+        <p id="overlay5" class="text">Have A Nice Day</p>
+      </div>
+      <div class="col-md-3" id="work6">
+        <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work6.jpg" alt="work2">
+        <p id="overlay6"class="text">Calculator</p>
+      </div>
+      <div class="col-md-3" id="work7">
+        <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work7.jpg" alt="work3">
+        <p id="overlay7" class="text">Burned</p>
+      </div>
+      <div class="col-md-3" id="work8">
+        <img src="https://raw.githubusercontent.com/r00t254/Delani-studio/master/IP3-master/assets/portfolio/work8.jpg" alt="work4">
+        <p id="overlay8" class="text">Giraffe Restaurant</p>
+      </div>
     </div>
+</div> 
+<div class="container-fluid contact">
+  <h2>CONTACT US</h2>
 
   </div>
 
